--- a/themes/sculptor/source/css/styles.styl
+++ b/themes/sculptor/source/css/styles.styl
@@ -25,6 +25,10 @@ body
   letter-spacing: -1px
   margin-bottom: 0
   color: #424242
+  text-decoration: none
+
+.nav__title-link--active
+  text-decoration: underline
 
 .nav__link
   text-decoration: none
