Update footer style

--- a/themes/sculptor/source/css/styles.styl
+++ b/themes/sculptor/source/css/styles.styl
@@ -53,6 +53,8 @@ body
 .footer
   text-align: center
   background-color: color-warm-grey
+  padding-top: 5px;
+  padding-bottom: 10px;
 
 .contact-list
   display: inline-block
