--- a/themes/sculptor/layout/_partial/footer.ejs
+++ b/themes/sculptor/layout/_partial/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer">
-    <ul class="contact-list">          
+    <ul class="contact-list">
       <li class="contact-list__item">Email: <a href="mailto:angela@angelasidwell.com">angela@angelasidwell.com</a></li>
-      <liclass="contact-list__item">Phone: 07944 333 408</li>
+      <li class="contact-list__item">Instagram: <a href="https://www.instagram.com/angela_sidwell_artist/">angela_sidwell_artist</a></li>
     </ul>
 </footer>
