--- a/themes/sculptor/source/css/styles.styl
+++ b/themes/sculptor/source/css/styles.styl
@@ -83,17 +83,18 @@ body
   white-space: no-wrap
   display: flex
   flex-wrap: wrap
-  justify-content: space-around
+  justify-content: center
 
 .gallery__item
   box-sizing: border-box
   padding: 1em
-  margin: 0
-  width: 100%
+  margin-left: auto
+  margin-right: auto
+
 
 .gallery__item-img
   max-width: 100%
-
+  max-height: 100vh
 
 .gallery__item-caption
   white-space: normal
