--- a/themes/sculptor/source/css/styles.styl
+++ b/themes/sculptor/source/css/styles.styl
@@ -18,7 +18,6 @@ body
   display: block
 
 .nav__title-link
-  font-family: 'Fredericka the Great', cursive
   font-size: 26px
   font-weight: 300
   line-height: 56px
@@ -27,14 +26,12 @@ body
   color: #424242
   text-decoration: none
 
-.nav__title-link--active
-  text-decoration: underline
-
 .nav__link
+  color: #424242
   text-decoration: none
 
 .nav__link--active
-  text-decoration: underline
+  text-decoration: none
 
 
 .article
@@ -52,13 +49,23 @@ body
 
 .footer
   text-align: center
-  background-color: color-warm-grey
+  border-top: 2px solid color-warm-grey
   padding-top: 5px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 
 .contact-list
   display: inline-block
   text-align: left
+  display: flex
+  justify-content: center
+
+.contact-list__item
+  padding-left: 5px
+  padding-right: 5px
+
+.social-icon
+  height: 16px
+  width: 16px  
 
 // feature-image
 .feature-image
@@ -94,7 +101,7 @@ body
 
 .gallery__item-img
   max-width: 100%
-  max-height: 100vh
+  max-height: 90vh
 
 .gallery__item-caption
   white-space: normal
@@ -107,5 +114,4 @@ body
   border 1px solid #ddd
 
 
-@import "_extend"
 @import "_partial/article"
