--- a/themes/sculptor/source/css/styles.styl
+++ b/themes/sculptor/source/css/styles.styl
@@ -14,6 +14,9 @@ body
 .nav
   padding-left: 15px
 
+.nav ul
+  display:flex
+
 .nav__title
   display: block
 
@@ -29,6 +32,8 @@ body
 .nav__link
   color: #424242
   text-decoration: none
+  padding-left: 10px
+  padding-right 10px
 
 .nav__link--active
   text-decoration: none
@@ -36,6 +41,10 @@ body
 
 .article
   margin-bottom: 1em
+
+.article p
+  margin-top 1em
+  margin-bottom 2em
 
 @media mq-tablet
   .article
