--- a/themes/sculptor/layout/layout.ejs
+++ b/themes/sculptor/layout/layout.ejs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       
       <link rel="icon" type="image/ico" href="/favicon.ico">
-	    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Suranna" rel="stylesheet" type="text/css">
         <%- css('css/styles.css') %>
 	    <!-- Title -->
 	    <%
