--- a/themes/sculptor/source/css/styles.styl
+++ b/themes/sculptor/source/css/styles.styl
@@ -63,12 +63,11 @@ body
   padding-bottom: 5px;
 
 .contact-list
-  display: inline-block
-  text-align: left
-  display: flex
-  justify-content: center
+  width: 100%
+  text-align: center
 
 .contact-list__item
+  display: inline-block
   padding-left: 5px
   padding-right: 5px
 
@@ -77,14 +76,10 @@ body
   width: 16px  
 
 // feature-image
-.feature-image
-  white-space: no-wrap
 
 .feature-image__img
   max-width: 100%
 
-.feature-image__text
-  white-space: normal;
 
 @media mq-desktop
   .feature-image__img
@@ -96,7 +91,6 @@ body
 
 // gallery
 .gallery
-  white-space: no-wrap
   display: flex
   flex-wrap: wrap
   justify-content: center
@@ -111,9 +105,6 @@ body
 .gallery__item-img
   max-width: 100%
   max-height: 90vh
-
-.gallery__item-caption
-  white-space: normal
 
 
 // blog
